--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header class=>
 
       <!-- nav-bar -->
-        <section class="mb-16" >
+        <!-- <section class="mb-16" >
           <nav>
 
 
@@ -51,7 +51,7 @@
 
 
            </nav>
-        </section>
+        </section> -->
       <!-- nav-bar -->
         <section class=" container mx-auto  sm:flex justify-between items-center">
 
@@ -274,7 +274,7 @@
     
          <section class="container mx-auto pb-7 "> 
 
-        <div class="grid grid-cols-1 sm:grid-cols-2  gap-14">
+        <div class="grid grid-cols-1 sm:grid-cols-2   gap-14">
           <!-- item-one -->
           <div class="h-32  rounded-xl shadow-lg flex justify-center gap-7  p-6
           ">
@@ -298,7 +298,7 @@
           <!-- item-one -->
 
           <!-- footer image -->
-          <div class=" row-span-3 pt-7"><img class="h-" src="images/shopping.png" alt=""></div>
+          <div class=" row-span-3 pt-7"><img class="" src="images/shopping.png" alt=""></div>
 
           <!-- footer image -->
 
